GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  cp no longer issues an incorrect warning about directory hardlinks when a
  source directory is specified multiple times.  Instead a warning is issued
  and the duplicate source directory is skipped, as already the case for files.

** New features

  chroot accepts the new --skip-chdir option to not change the working directory
  to "/" after changing into the chroot(2) jail, thus retaining the current wor-
  king directory.  The new option is only permitted if the new root directory is
  the old "/", and therefore is useful with the --group and --userspec options.

** Changes in behavior

  chroot changes the current directory to "/" in again - unless the above new
  --skip-chdir option is specified.
  [bug introduced in coreutils-8.23]

** Improvements

  References from --help and the man pages of utilities have been corrected
  in various cases, and more direct links to the corresponding online
  documentation are provided.


* Noteworthy changes in release 8.23 (2014-07-18) [stable]

** Bug fixes

  chmod -Rc no longer issues erroneous warnings for files with special bits set.
  [bug introduced in coreutils-6.0]

  cp -a, mv, and install --preserve-context, once again set the correct SELinux
  context for existing directories in the destination.  Previously they set
  the context of an existing directory to that of its last copied descendent.
  [bug introduced in coreutils-8.22]

  cp -a, mv, and install --preserve-context, no longer seg fault when running
  with SELinux enabled, when copying from file systems that return an error
  when reading the SELinux context for a file.
  [bug introduced in coreutils-8.22]

  cp -a and mv now preserve xattrs of symlinks copied across file systems.
  [bug introduced with extended attribute preservation feature in coreutils-7.1]
